# NCKU-DS2024-HW2-template

./: CMakeLists.txt  fheap.c  fheap.h  main.c
tests/: consolidate.cpp  delete.cpp  insert.cpp  merge.cpp  sort.cpp
